# logic-circuit-simulator-2

./: .clang-format  .gitignore  .gitmodules  .style.css  CMakeLists.txt  Doxyfile  LICENSE  README.md  compile_flags.txt  tr.sh  vcpkg.json
.gitea/workflows/: lcs.yml
.github/workflows/: lcs.yml
cmake/: Application.cmake  Doxygen.cmake  Gtkmm.cmake  ImGui.cmake  Json.cmake  Others.cmake  Tests.cmake  Tfd.cmake  Yaml.cmake
i18n/: LogicCircuitSimulator.pot  de_DE.po  en_US.po  fr_FR.po  po.h  ru_RU.po  tr_TR.po
include/: common.h  core.h  errors.h  io.h  net.h  parse.h  ui.h
include/ui/: components.h  configuration.h  flows.h  layout.h  nodes.h  popup.h  util.h
misc/: themes.json
misc/locale/de_DE/LC_MESSAGES/: LogicCircuitSimulator.mo
misc/locale/en_US/LC_MESSAGES/: LogicCircuitSimulator.mo
misc/locale/fr_FR/LC_MESSAGES/: LogicCircuitSimulator.mo
misc/locale/ru_RU/LC_MESSAGES/: LogicCircuitSimulator.mo
misc/locale/tr_TR/LC_MESSAGES/: LogicCircuitSimulator.mo
src/: main.cpp
src/api/: CMakeLists.txt  api.h
src/api/src/: auth.cpp
src/common/: CMakeLists.txt  common.cpp  common.h  default_ini.txt  errors.h  io.cpp  logging.cpp  port.h
src/common/src/: common.cpp  default_ini.txt  io.cpp  lcs.desktop.txt  license.cpp  networking.cpp  util.cpp
src/core/: CMakeLists.txt  component.cpp  core.h  engine.cpp  engine.h  gate.cpp  impl_from_json.cpp  impl_to_json.cpp  parse.cpp  scene.cpp  sys.cpp  types.h
src/core/src/: component.cpp  engine.cpp  gate.cpp  impl_from_json.cpp  impl_to_json.cpp  parser.cpp  resource_manager.cpp  scene.cpp  session.cpp  tabs.cpp
src/io/: CMakeLists.txt  deserialization.cpp  io.cpp  serialization.cpp
src/net/: CMakeLists.txt  auth.cpp  client.cpp
src/parse/: CMakeLists.txt  deserialization.cpp  parse.cpp  parse.h  serialization.cpp
src/port/: CMakeLists.txt  port.h
src/port/src/: default_ini.txt  io.cpp  logging.cpp  networking.cpp  tfdwrapper.cpp
src/ui/: Application.h  CMakeLists.txt  Components.cpp  Console.cpp  Inspector.cpp  Logger.cpp  Menubar.cpp  NodeEditor.cpp  NodeView.cpp  Palette.cpp  Profile.cpp  SceneInfo.cpp  Window.cpp  Window.h  components.h  config.cpp  configuration.h  editor.cpp  file_operations.cpp  layout.cpp  main.cpp  nodes.cpp  nodes.hpp  palette.cpp  style.cpp  themes.cpp  ui.h  util.cpp  util.h
src/ui/components/: Components.cpp  NodeView.cpp  Notification.cpp
src/ui/layout/: Console.cpp  Inspector.cpp  Menubar.cpp  NodeEditor.cpp  Palette.cpp  SceneInfo.cpp
src/ui/popup/: Login.cpp  Preferences.cpp
src/ui/src/: components.cpp  components.h  config.cpp  console.cpp  dbg_viewer.cpp  editor.cpp  file_operations.cpp  inspector.cpp  layout.h  login.cpp  main.cpp  menubar.cpp  node_editor.cpp  notification.cpp  palette.cpp  preferences.cpp  scene_info.cpp  style.cpp  util.cpp
src/ui/src/components/: Components.cpp  NodeView.cpp  Notification.cpp
src/ui/src/layout/: Console.cpp  DbgViewer.cpp  Inspector.cpp  Menubar.cpp  NodeEditor.cpp  Palette.cpp  SceneInfo.cpp
src/ui/src/popup/: Login.cpp
template/: Logic Circuit Simulator.cmb
test/: 0_prepare.cpp  1_basic_tests.cpp  2_node_connections.cpp  3_socket_increment.cpp  4_add_remove.cpp  4_serialization.cpp  5_component.cpp  5_serialization.cpp  6_serialization.cpp  7_io.cpp  test_util.h
